@@ -51,7 +51,7 @@ impl TimestampStyle {
             TimestampStyle::SECONDS => Ok(TimestampStyle::Secodns),
             TimestampStyle::FULL => Ok(TimestampStyle::Full),
             _ => Err(format!(
-                "Unknown timestamp style {name}. Valid options are: {}, {}, {}",
+                "Unknown timestamp style: '{name}'. Valid options are: {}, {}, {}",
                 Self::DATE,
                 Self::SECONDS,
                 Self::FULL
@@ -108,7 +108,7 @@ impl GroupBy {
             GroupBy::YEAR => Ok(GroupBy::Year),
             _ => {
                 let msg = format!(
-                    "Unknown group-by selector. Valid options are: {}, {}, {}, {}, {}",
+                    "Unknown group-by selector: '{group_by}'. Valid options are: {}, {}, {}, {}, {}",
                     GroupBy::ISO_WEEK_DATE,
                     GroupBy::ISO_WEEK,
                     GroupBy::DATE,
